...
                android:textColor="@color/primary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/small_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary"
                android:text="Add"
                android:textColor="@android:color/white"
...
                android:id="@+id/insideConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

                <EditText
                    android:id="@+id/name_editText"
                    android:layout_width="297dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_white_rounded"
                    android:backgroundTint="?attr/colorContainer"
...
                    android:hint="Item Name"
                    android:maxLength="21"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enter_name_prompt" />

                <TextView
                    android:id="@+id/tag_dropdown"
                    android:layout_width="297dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_white_rounded"
                    android:backgroundTint="?attr/colorContainer"
...
                    android:text="Make"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.086"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/value_editText" />

                <TextView
                    android:id="@+id/enter_name_prompt6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Model"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.086"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/make_editText" />

                <TextView
                    android:id="@+id/enter_name_prompt7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
...
                    android:text="Comment"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.088"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/desc_editText" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bio_editText"
                    android:layout_width="297dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
...
