...
        android:layout_marginBottom="30px"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_button"
            android:layout_width="295dp"
            android:layout_height="61dp"
            android:text="@string/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
...
            android:text="Sort"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@+id/filter_button" />

        <Button
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
...
